웹폰트 적용

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Yongmin Kim Portfolio</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>헬로우 !</h1>
+    <p lang="en"> Hello world! </p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
